--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Helen Calderon by helencalderon</title>
+    <title>Helen Calderon</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -19,8 +19,9 @@
       <p>tel:<a href="tel:0759532750"> 07595 327 850</a></p>
       <p>email: <a href="mailto:helencalderon@gmail.com"></a><a href="mailto:helencalderon@gmail.com">helencalderon@gmail.com</a></p>
       <p>github: <a href="https://www.github.com/helencalderon">helencalderon</a></p>
-      <p>sample website: <a href="http://www.bodhinyanagroup.co.uk">Bodhinyana group</a><br/><br/> I developed and launched a responsive website for a Buddhist mediation group meeting in Hemel Hempstead.</p>
-      <p>LinkedIn <a href="https://uk.linkedin.com/in/helencalderon">Helen Calderon</a></p>
+      <p>LinkedIn: <a href="https://uk.linkedin.com/in/helencalderon">Helen Calderon</a></p>
+      <p>sample website: <a href="http://www.bodhinyanagroup.co.uk">Bodhinyana group</a><br/> I developed and launched a responsive website for a Buddhist mediation group meeting in Hemel Hempstead.</p>
+      
 
       <footer class="site-footer">
       
