--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <p>email: <a href="mailto:helencalderon@gmail.com"></a><a href="mailto:helencalderon@gmail.com">helencalderon@gmail.com</a></p>
       <p>github: <a href="https://www.github.com/helencalderon">helencalderon</a></p>
       <p>LinkedIn: <a href="https://uk.linkedin.com/in/helencalderon">Helen Calderon</a></p>
-      <p>sample website: <a href="http://www.bodhinyanagroup.co.uk">Bodhinyana group</a><br/> I developed and launched a responsive website for a Buddhist mediation group meeting in Hemel Hempstead.</p>
+      <p>sample website: <a href="http://www.bodhinyanagroup.org.uk">Bodhinyana group</a><br/> I developed and launched a responsive website for a Buddhist mediation group meeting in Hemel Hempstead.</p>
       
 
       <footer class="site-footer">
